deploy: 5e2e4662aa925d25934f4f4cacd73f3a6ca4ba98

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 						<!-- About -->
 													<article id="about">
 								<h2 class="major">About Me</h2>
-																										<span><img src="https://i.pinimg.com/originals/36/f0/01/36f001b697a8bab2051bd03cf1a60973.jpg" style="display: block;margin-left: auto;margin-right: auto;width: 50%;"></span>
+																										<span><img src="images/dp.jfif" style="display: block;margin-left: auto;margin-right: auto;width: 50%;"></span>
 																																	A description of yourself
 																</br>
 								</br>
