--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-					background-image: url("https://i.pinimg.com/originals/17/b8/66/17b8669917485ee73510c5cfa5d8b0e6.jpg");
+					background-image: url("images/max-kuntscher-Cpb2HY41bs8-unsplash.jpg");
 					background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
@@ -97,7 +97,7 @@
 													<article id="about">
 								<h2 class="major">About Me</h2>
 																										<span><img src="images/dp.jfif" style="display: block;margin-left: auto;margin-right: auto;width: 50%;"></span>
-																																	A description of yourself
+																																	Hey! this is Utkarsh. This is an attempt to write a non-generic non-pretentious introduction about myself. I don't have any idea how to start. So, its better to just go to my LinkedIn where you will find all the pretentious stuff.
 																</br>
 								</br>
 								<ul class="icons">
