--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 						<!-- Start of projects section -->
 							<article id="projects">
 								<h2 class="major">Projects</h2>
-								<h3>Investor Table</h3>
-								<iframe class="airtable-embed" src=https://airtable.com/embed/shrnPlOx4pF2U0Ed8?backgroundColor=blue&amp;viewControls=on frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
-								<h3>Startup Table</h3>
-								<iframe class="airtable-embed" src=https://airtable.com/embed/shrkQoe33gMMyoTcC?backgroundColor=blue&amp;viewControls=on frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+								<h3></h3>
+								<iframe class="airtable-embed" src= frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+								<h3></h3>
+								<iframe class="airtable-embed" src= frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
 
 								
 
